--- a/.babelrc
+++ b/.babelrc
@@ -1,11 +1,7 @@
 {
-  "presets": [
-    ["@babel/preset-env", { "useBuiltIns": "usage" }],
-    ["@babel/preset-react"]
-  ],
+  "presets": [["@babel/preset-env"], ["@babel/preset-react"]],
   "plugins": [
     ["@babel/plugin-transform-async-to-generator", { "loose": true }],
-    ["@babel/plugin-proposal-class-properties"],
     ["inline-json-import", {}]
   ]
 }
