--- a/package.json
+++ b/package.json
@@ -28,6 +28,8 @@
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
     "prettier": "^2.5.1",
+    "react-input-mask": "^2.0.4",
+    "react-text-mask": "^5.4.3",
     "style-loader": "^1.0.0",
     "webpack": "^4.40.2",
     "webpack-cli": "^3.3.9",
