--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --open --mode development"
+    "start": "webpack-dev-server --mode=development",
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -12,7 +13,6 @@
   "devDependencies": {
     "@babel/core": "^7.6.0",
     "@babel/eslint-parser": "^7.17.0",
-    "@babel/plugin-transform-async-to-generator": "^7.5.0",
     "@babel/preset-env": "^7.6.0",
     "@babel/preset-react": "^7.0.0",
     "babel": "^6.23.0",
@@ -21,9 +21,6 @@
     "babel-plugin-inline-json-import": "^0.3.2",
     "css-loader": "^3.2.0",
     "eslint": "^8.10.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-react": "^7.29.2",
     "file-loader": "^4.2.0",
     "html-loader": "^0.5.5",
     "html-webpack-plugin": "^3.2.0",
