--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,7 @@
 {
   "singleQuote": true,
-  "jsxSingleQuote": true,
-  "trailingComma": "es5",
+  "jsxSingleQuote": false,
   "bracketSpacing": true,
-  "jsxBracketSameLine": false
+  "jsxBracketSameLine": false,
+  "trailingComma": "all"
 }
