--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "webpack-dev-server --mode=development",
+    "test": "jest",
     "build": "webpack"
   },
   "keywords": [],
@@ -20,8 +21,14 @@
     "babel-loader": "^8.0.6",
     "babel-plugin-inline-json-import": "^0.3.2",
     "css-loader": "^3.2.0",
-    "eslint": "^8.10.0",
+    "eslint": "^8.26.0",
+    "eslint-config-airbnb": "^19.0.4",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.6.1",
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0",
     "file-loader": "^4.2.0",
+    "jest": "^29.2.2",
     "prettier": "^2.5.1",
     "style-loader": "^1.0.0",
     "webpack": "^4.40.2",
@@ -30,6 +37,7 @@
   },
   "dependencies": {
     "leaflet": "^1.5.1",
+    "prop-types": "^15.8.1",
     "react": "^16.9.0",
     "react-dom": "^16.9.0",
     "react-leaflet": "^2.4.0"
